--- a/css/style.css
+++ b/css/style.css
@@ -6935,6 +6935,20 @@ img {
   margin-top: .5em;
   color: #ececed; }
 
+#skiptocontent a {
+  padding: 6px;
+  position: absolute;
+  top: -40px;
+  left: 0px;
+  color: white;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+  border-bottom-right-radius: 8px;
+  background: transparent;
+  -webkit-transition: top 1s ease-out, background 1s linear;
+  transition: top 1s ease-out, background 1s linear;
+  z-index: 100; }
+
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   a:hover {
