--- a/css/johnson/_cornell-brand.scss
+++ b/css/johnson/_cornell-brand.scss
@@ -13,7 +13,7 @@
 }
 .cu-logo {
 	display: block;
-	background: url("../images/layout/cornell.gif") no-repeat 0 0;
+	background: url("../img/layout/cornell.gif") no-repeat 0 0;
 	width: 169px;
 	height: 45px;
 	a {
