--- a/css/style.css
+++ b/css/style.css
@@ -6861,7 +6861,7 @@ button.close {
 
 .cu-logo {
   display: block;
-  background: url("../images/layout/cornell.gif") no-repeat 0 0;
+  background: url("../img/layout/cornell.gif") no-repeat 0 0;
   width: 169px;
   height: 45px; }
   .cu-logo a {
@@ -7083,7 +7083,7 @@ footer {
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   .image-wrapper {
-    background: url("../images/banner.jpg") no-repeat center;
+    background: url("../img/banner.jpg") no-repeat center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
