--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -38,6 +38,7 @@
 			font-size: 16px;
 			text-transform: uppercase;
 			margin-right: .25em;
+			float: left;
 			a {
 				color: $dark-gray;
 				text-decoration: none;
