--- a/css/style.css
+++ b/css/style.css
@@ -7313,4 +7313,10 @@ footer {
   .panel .panel-body .form-control {
     margin-bottom: 2em; }
 
+body.admin-menu {
+  padding-top: 0 !important; }
+
+#admin-menu li {
+  font-size: 12px; }
+
 /*# sourceMappingURL=style.css.map */
