try to fix mobile nav

--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -107,7 +107,7 @@
 	// 		}
 	// 	}
 	// }
-	.navbar-collapse {
+	.navigation-collapse {
 		padding-right: 0;
 	}
 	// footer {
@@ -118,9 +118,9 @@
 	// 	}
 	// }
 
-	.navbar-collapse.collapse {
-		display: none !important;
-	}
+	// .navbar-collapse.collapse {
+	// 	display: none !important;
+	// }
 	.navbar-brand,
 	.navbar-brand:hover {
 		color: white;
