--- a/css/johnson/_variables.scss
+++ b/css/johnson/_variables.scss
@@ -36,5 +36,6 @@ $link-color-hover: #2e2e2e;
 // Bootstrap overrides
 // -------------------------
 
-$font-family-sans-serif:  'PFDinTextPro-Regular', arial, san-serif;
-
+$font-family-sans-serif:  'pf_dintext_proregular', arial, san-serif;
+$font-family-bold: 'pf_dintext_probold';
+$font-family-italic: 'pf_dintext_proitalic';
