--- a/css/style.css
+++ b/css/style.css
@@ -6837,11 +6837,23 @@ button.close {
   content: ""; }
 
 @font-face {
-  font-family: 'PFDinTextPro';
-  src: url("../fonts/Parachute-PFDinTextPro-Regular.otf");
-  src: url("../fonts/Parachute-PFDinTextPro-BoldItalic.otf");
-  src: url("../fonts/Parachute-PFDinTextPro-Bold.otf");
-  src: url("../fonts/Parachute-PFDinTextPro-Italic.otf"); }
+  font-family: 'pf_dintext_proitalic';
+  src: url("../fonts/parachute/parachute_-_pfdintextpro-italic-webfont.eot");
+  src: url("../fonts/parachute/parachute_-_pfdintextpro-italic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/parachute/parachute_-_pfdintextpro-italic-webfont.woff2") format("woff2"), url("../fonts/parachute/parachute_-_pfdintextpro-italic-webfont.woff") format("woff"), url("../fonts/parachute/parachute_-_pfdintextpro-italic-webfont.ttf") format("truetype"), url("../fonts/parachute/parachute_-_pfdintextpro-italic-webfont.svg#pf_dintext_proitalic") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'pf_dintext_probold';
+  src: url("../fonts/parachute/parachute_-_pfdintextpro-bold-webfont.eot");
+  src: url("../fonts/parachute/parachute_-_pfdintextpro-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/parachute/parachute_-_pfdintextpro-bold-webfont.woff2") format("woff2"), url("../fonts/parachute/parachute_-_pfdintextpro-bold-webfont.woff") format("woff"), url("../fonts/parachute/parachute_-_pfdintextpro-bold-webfont.ttf") format("truetype"), url("../fonts/parachute/parachute_-_pfdintextpro-bold-webfont.svg#pf_dintext_probold") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'pf_dintext_proregular';
+  src: url("../fonts/parachute/parachute_-_pfdintextpro-regular-webfont.eot");
+  src: url("../fonts/parachute/parachute_-_pfdintextpro-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/parachute/parachute_-_pfdintextpro-regular-webfont.woff2") format("woff2"), url("../fonts/parachute/parachute_-_pfdintextpro-regular-webfont.woff") format("woff"), url("../fonts/parachute/parachute_-_pfdintextpro-regular-webfont.ttf") format("truetype"), url("../fonts/parachute/parachute_-_pfdintextpro-regular-webfont.svg#pf_dintext_proregular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
 .cornell-brand {
   background: white;
   font-family: verdana, sans-serif;
@@ -6890,7 +6902,7 @@ button.close {
   float: right; }
 
 body {
-  font-family: "PFDinTextPro-Regular", arial, san-serif;
+  font-family: "pf_dintext_proregular", arial, san-serif;
   background: #ececed; }
 
 a {
@@ -6901,7 +6913,7 @@ a:hover {
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "PFDinTextPro-Regular", arial, san-serif; }
+  font-family: "pf_dintext_proregular", arial, san-serif; }
 
 p, li {
   font-size: 16px; }
