--- a/css/johnson/_base.scss
+++ b/css/johnson/_base.scss
@@ -20,7 +20,7 @@ a:hover {
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: $font-family-sans-serif;
+  font-family: $font-family-bold;
 }
 
 // Typography
