--- a/css/johnson/_layout.scss
+++ b/css/johnson/_layout.scss
@@ -84,7 +84,7 @@ footer {
 	.footer-block {
 		@include make-sm-column(3);
 	}
-	h4 {
+	.block-title {
 		text-transform: uppercase;
 		font-size: 16px;
 	}
