--- a/css/style.css
+++ b/css/style.css
@@ -7077,7 +7077,7 @@ footer {
       footer .footer-block {
         float: left;
         width: 25%; } }
-  footer h4 {
+  footer .block-title {
     text-transform: uppercase;
     font-size: 16px; }
   footer .nav {
