--- a/css/johnson/_layout.scss
+++ b/css/johnson/_layout.scss
@@ -87,6 +87,7 @@ footer {
 	.block-title {
 		text-transform: uppercase;
 		font-size: 16px;
+		font-family: $font-family-sans-serif;
 	}
 	.nav {
 		margin: 0;
