--- a/css/style.css
+++ b/css/style.css
@@ -7079,7 +7079,8 @@ footer {
         width: 25%; } }
   footer .block-title {
     text-transform: uppercase;
-    font-size: 16px; }
+    font-size: 16px;
+    font-family: "pf_dintext_proregular", arial, san-serif; }
   footer .nav {
     margin: 0;
     padding: 0; }
