specify fonts for bold and italic

--- a/css/style.css
+++ b/css/style.css
@@ -6918,6 +6918,12 @@ h1, h2, h3, h4, h5, h6,
 p, li {
   font-size: 16px; }
 
+strong {
+  font-family: "pf_dintext_probold"; }
+
+em {
+  font-family: "pf_dintext_proitalic"; }
+
 .btn {
   border-radius: 0;
   text-decoration: none; }
