--- a/css/johnson/_base.scss
+++ b/css/johnson/_base.scss
@@ -29,6 +29,12 @@ h1, h2, h3, h4, h5, h6,
 p, li {
 	font-size: 16px;
 }
+strong {
+	font-family: $font-family-bold;
+}
+em {
+	font-family: $font-family-italic;
+}
 
 // Buttons
 // -------------------------
