--- a/css/johnson/_layout.scss
+++ b/css/johnson/_layout.scss
@@ -90,7 +90,7 @@ footer {
 		font-family: $font-family-sans-serif;
 	}
 	.nav {
-		margin: 0;
+		margin: 0 0 2em 0;
 		padding: 0;
 		li {
 			border-bottom: solid 1px #d1d1d1;
