--- a/css/style.css
+++ b/css/style.css
@@ -7088,7 +7088,7 @@ footer {
     font-size: 16px;
     font-family: "pf_dintext_proregular", arial, san-serif; }
   footer .nav {
-    margin: 0;
+    margin: 0 0 2em 0;
     padding: 0; }
     footer .nav li {
       border-bottom: solid 1px #d1d1d1; }
