--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -77,7 +77,13 @@
 
 // SIDEBAR NAVIGATION
 // -------------------------
-
+.sidebar {
+	.block-title {
+		background: #dbdbdc;
+		color: black;
+		font-size: 18px;
+	}
+}
 
 // MEDIA QUERIES
 // -------------------------
