--- a/css/style.css
+++ b/css/style.css
@@ -7043,7 +7043,10 @@ img {
   @media (min-width: 768px) {
     .main-text {
       float: left;
-      width: 75%; } }
+      width: 66.66667%; } }
+  @media (min-width: 768px) {
+    .main-text {
+      margin-left: 8.33333%; } }
 
 .main-content {
   background: white; }
@@ -7158,10 +7161,11 @@ footer {
 .nav > li > a {
   padding: 5px 15px; }
 
-.sidebar .block-title {
+.sidebar .block-title a {
   background: #dbdbdc;
   color: black;
-  font-size: 18px; }
+  font-size: 18px;
+  padding: 10px 15px; }
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
