--- a/css/style.css
+++ b/css/style.css
@@ -7161,16 +7161,21 @@ footer {
 .nav > li > a {
   padding: 5px 15px; }
 
-.sidebar .block-title a {
-  background: #dbdbdc;
-  color: black;
-  font-size: 18px;
-  padding: 10px 15px;
-  display: block; }
-.sidebar .block-title a:hover {
-  text-decoration: none; }
+.sidebar .block-title {
+  margin-bottom: 0; }
+  .sidebar .block-title a {
+    background: #dbdbdc;
+    color: black;
+    font-size: 18px;
+    padding: 10px 15px;
+    display: block; }
+  .sidebar .block-title a:hover {
+    text-decoration: none; }
 .sidebar .nav > li > a {
   border-bottom: solid 1px #d3d2d2; }
+.sidebar .nav > li > a:hover {
+  background: inherit;
+  text-decoration: underline; }
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
