--- a/css/johnson/_base.scss
+++ b/css/johnson/_base.scss
@@ -22,6 +22,11 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: $font-family-bold;
 }
+.main-text {
+	h2:first-child {
+		margin-top: 0;
+	}
+}
 
 // Typography
 // -------------------------
