--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -169,7 +169,7 @@
 	// }
 }
 // /* Large devices (large desktops, 1200px and up) */
-@media (min-width: @screen-lg) {
+@media (min-width: $screen-lg) {
 	.navbar-brand {
 		font-size: 48px;
 	}
