--- a/css/johnson/_layout.scss
+++ b/css/johnson/_layout.scss
@@ -32,10 +32,10 @@
 // BRANDING and NAV
 // -------------------------
 .brand {
-	@include make-md-column(6);
+	@include make-sm-column(6);
 }
 .navigation {
-	@include make-md-column(6);
+	@include make-sm-column(6);
 }
 
 // SUB PAGES
