--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -22,6 +22,10 @@
 	color: black;
 	display: block;
 }
+.college-brand:hover {
+	color: black;
+	text-decoration: none;
+}
 
 .navbar {
 	// background: url("../images/banner.jpg") no-repeat center;
@@ -151,6 +155,10 @@
 		color: white;
 		text-shadow: 2px 2px 0px rgba(63, 63, 63, 1);
 		margin-top: 2em;
+	}
+	.college-brand:hover {
+		color: white;
+		text-decoration: none;
 	}
 	.navbar-brand {
 		padding: 15px;
