--- a/css/style.css
+++ b/css/style.css
@@ -7134,6 +7134,10 @@ footer {
   color: black;
   display: block; }
 
+.college-brand:hover {
+  color: black;
+  text-decoration: none; }
+
 .navbar .nav {
   margin-top: 2.75em; }
   .navbar .nav li {
@@ -7192,6 +7196,10 @@ footer {
     color: white;
     text-shadow: 2px 2px 0px #3f3f3f;
     margin-top: 2em; }
+
+  .college-brand:hover {
+    color: white;
+    text-decoration: none; }
 
   .navbar-brand {
     padding: 15px;
