--- a/css/style.css
+++ b/css/style.css
@@ -6905,6 +6905,10 @@ a {
 a:hover {
   color: #2e2e2e; }
 
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  font-weight: 700; }
+
 .main-text h2:first-child {
   margin-top: 0; }
 
