--- a/css/johnson/_variables.scss
+++ b/css/johnson/_variables.scss
@@ -37,3 +37,4 @@ $link-color-hover: #2e2e2e;
 // -------------------------
 
 $font-family-sans-serif:  'pf_dintext_proregular', arial, san-serif;
+// $font-family-bold: 'pf_dintext_probold';
