--- a/css/johnson/_tabs.scss
+++ b/css/johnson/_tabs.scss
@@ -10,6 +10,24 @@
 				margin-left: .5em;
 			}
 		}
+		//force tab styling on sub pages
+		.nav > li > a {
+			padding: 15px 20px;
+			border-radius: 0;
+			border: 0;
+			text-decoration: none;
+			color: $charcoal-gray;
+			background: $pale-tan;
+			margin-right: 0;
+		}
+		.nav > li > a:hover {
+			color: black;
+		}
+		.nav > li.active > a, .nav > li.active > a:hover, .nav > li.active > a:focus {
+			border: 0;
+			color: black;
+			background: white;
+		}
 	}
 	.nav-tabs > li > a {
 		padding: 15px 20px;
