make books search box inline

--- a/css/johnson/_tabs.scss
+++ b/css/johnson/_tabs.scss
@@ -103,3 +103,11 @@
 		margin-bottom: 1.5em;
 	}
 }
+// Books and Journals
+.books-search {
+	.form-group {
+		width: 75%;
+		float: left;
+		margin-right: .25em;
+	}
+}
