--- a/css/style.css
+++ b/css/style.css
@@ -7163,7 +7163,7 @@ footer {
 .nav > li > a {
   padding: 5px 15px; }
 
-.nav-mobile {
+.nav-mobile .navbar-nav {
   float: none; }
 
 .sidebar .block-title {
