sidebar nav formatting

--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -78,9 +78,15 @@
 .nav > li > a {
 	padding: 5px 15px;
 }
+
+// MOBILE MAIN NAVIGATION
+// -------------------------
 .nav-mobile {
 	.navbar-nav {
 		float: none;
+	}
+	.nav > li > a {
+		background: $light-gray;
 	}
 }
 
