--- a/css/style.css
+++ b/css/style.css
@@ -7186,6 +7186,9 @@ footer {
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+  .sidebar-collapse.collapse {
+    display: block; }
+
   .navigation-collapse {
     padding-right: 0; }
 
