--- a/css/johnson/_layout.scss
+++ b/css/johnson/_layout.scss
@@ -44,9 +44,12 @@
 	@include make-sm-column(3);
 	padding: 3em 0;
 }
-.main-text {
+.main-text-2col {
 	@include make-sm-column(8);
 	@include make-sm-column-offset(1);
+	padding: 3em 0;
+}
+.main-text {
 	padding: 3em 0;
 }
 .main-content {
