--- a/css/style.css
+++ b/css/style.css
@@ -7025,19 +7025,22 @@ img {
       float: left;
       width: 25%; } }
 
-.main-text {
+.main-text-2col {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
   padding: 3em 0; }
   @media (min-width: 768px) {
-    .main-text {
+    .main-text-2col {
       float: left;
       width: 66.66667%; } }
   @media (min-width: 768px) {
-    .main-text {
+    .main-text-2col {
       margin-left: 8.33333%; } }
+
+.main-text {
+  padding: 3em 0; }
 
 .main-content {
   background: white; }
