--- a/css/style.css
+++ b/css/style.css
@@ -7379,6 +7379,11 @@ footer {
         font-size: 75%;
         margin-left: .5em;
         color: #b41b1d; }
+    .resource-content .tab-content ul a:before,
+    .resource-content .panel-body ul a:before,
+    .panel .tab-content ul a:before,
+    .panel .panel-body ul a:before {
+      content: "\f054"; }
   .resource-content .tab-content .form-control,
   .resource-content .panel-body .form-control,
   .panel .tab-content .form-control,
