add chevron-right via css to list items in tabs

--- a/css/style.css
+++ b/css/style.css
@@ -7379,10 +7379,10 @@ footer {
         font-size: 75%;
         margin-left: .5em;
         color: #b41b1d; }
-    .resource-content .tab-content ul a:before,
-    .resource-content .panel-body ul a:before,
-    .panel .tab-content ul a:before,
-    .panel .panel-body ul a:before {
+    .resource-content .tab-content ul a:after,
+    .resource-content .panel-body ul a:after,
+    .panel .tab-content ul a:after,
+    .panel .panel-body ul a:after {
       content: "\f054"; }
   .resource-content .tab-content .form-control,
   .resource-content .panel-body .form-control,
