chevron arrow button spacing

--- a/css/johnson/_base.scss
+++ b/css/johnson/_base.scss
@@ -42,9 +42,13 @@ p, li {
 	border-radius: 0;
 	text-decoration: none;
 }
-.btn-jgsm {
+.btn-jgsm,
+.btn-jgsm:active {
 	background: $johnson-red;
 	color: white;
+	i {
+		margin-left: .25em;
+	}
 }
 .btn-jgsm:hover {
 	background: black;
