--- a/css/style.css
+++ b/css/style.css
@@ -7406,6 +7406,11 @@ body.admin-menu {
 #admin-menu li {
   font-size: 12px; }
 
+.statistics_counter {
+  font-size: 14px;
+  padding: 4px 8px;
+  background: #ececed; }
+
 .topic {
   font-size: 18px;
   margin: 0 0 .25em 0; }
