--- a/css/johnson/_drupal.scss
+++ b/css/johnson/_drupal.scss
@@ -10,4 +10,5 @@ body.admin-menu { padding-top: 0 !important; }
 	font-size: 14px;
 	padding: 4px 8px;
 	background: $light-gray;
+	margin-top: 1em;
 }
