--- a/css/johnson/_drupal.scss
+++ b/css/johnson/_drupal.scss
@@ -7,8 +7,9 @@ body.admin-menu { padding-top: 0 !important; }
 
 // # of reads
 .statistics_counter {
-	font-size: 14px;
-	padding: 4px 8px;
-	background: $light-gray;
+	font-size: 16px;
+	padding: 4px 8px !important;
+	background: $medium-gray;
 	margin-top: 1em;
+	color: white;
 }
