--- a/css/johnson/_drupal.scss
+++ b/css/johnson/_drupal.scss
@@ -9,7 +9,6 @@ body.admin-menu { padding-top: 0 !important; }
 .statistics_counter {
 	font-size: 16px;
 	padding: 4px 8px !important;
-	background: $medium-gray;
+	background: $light-gray;
 	margin-top: 1em;
-	color: white;
 }
