--- a/css/style.css
+++ b/css/style.css
@@ -7412,6 +7412,12 @@ body.admin-menu {
   background: #ececed;
   margin-top: 1em; }
 
+.webform-client-form {
+  margin: 2em 0; }
+
+.webform-component {
+  margin: 0 0 1em; }
+
 .topic {
   font-size: 18px;
   margin: 0 0 .25em 0; }
