format ask a librarian form

--- a/css/johnson/_drupal.scss
+++ b/css/johnson/_drupal.scss
@@ -17,6 +17,9 @@ body.admin-menu { padding-top: 0 !important; }
 //--------------------//
 .webform-client-form {
 	margin: 2em 0;
+	label {
+		font-size: 18px;
+	}
 }
 .webform-component {
 	margin: 0 0 1em;
