--- a/css/style.css
+++ b/css/style.css
@@ -7414,6 +7414,8 @@ body.admin-menu {
 
 .webform-client-form {
   margin: 2em 0; }
+  .webform-client-form label {
+    font-size: 18px; }
 
 .webform-component {
   margin: 0 0 1em; }
