--- a/css/style.css
+++ b/css/style.css
@@ -7461,6 +7461,10 @@ body.admin-menu {
   font-size: 18px;
   margin: 0 0 .25em 0; }
 
+.topic-list ul li {
+  float: left;
+  padding-right: .5em; }
+
 .label-topic {
   background: #ececed;
   font-weight: normal;
