format topic labels

--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -17,3 +17,8 @@
 	font-weight: normal;
 	font-size: 12px;
 }
+.label-topic:hover,
+.label-topic:active {
+	background: $cornell-primary;
+	color: white;
+}
