--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -28,14 +28,6 @@
 }
 
 .navbar {
-	// background: url("../images/banner.jpg") no-repeat center;
-	// -webkit-background-size: cover;
-	// -moz-background-size: cover;
-	// -o-background-size: cover;
-	// background-size: cover;
-	// margin-bottom: 0;
-	// border-radius: 0;
-	// min-height: 175px;
 	.nav {
 		margin-top: 2.75em;
 		li {
@@ -54,14 +46,10 @@
 				}
 			}
 			a:hover {
-				// background-color: $light-ice-blue;
-
 			}
 		}
 		li.active {
 			a, a:hover {
-				// color: white;
-				// background-color: $ice-blue;
 			}
 		}
 	}
@@ -87,6 +75,10 @@
 	}
 	.nav > li > a {
 		background: $light-gray;
+		border-bottom: 1px solid #959696;
+		padding: 8px 30px;
+		text-transform: uppercase;
+		color: black;
 	}
 }
 
