--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -3,7 +3,7 @@
 
 .hours {
 	background: white;
-	border: 1px solid $light-tan;
+	border: 1px solid $tan;
 	display: inline-block;
 	margin-top: -1px;
 	.today-hours {
