--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -15,7 +15,6 @@
 			text-transform: uppercase;
 			margin: 0 .75em 0 0;
 			font-weight: 700;
-			// float: left;
 			line-height: 1.4em;
 		}
 		i {
@@ -25,8 +24,6 @@
 	}
 	.all-hours-link {
 		padding-left: 1em;
-		border-left: 1px solid $pale-tan;
-		float: left;
 		padding: 5px 5px 5px 10px;
 		margin: 5px;
 	}
@@ -95,6 +92,10 @@
 		float: right;
 		background: $tan;
 		border: 1px solid $tan;
+		.all-hours-link {
+			border-left: 1px solid $pale-tan;
+			float: left;
+		}
 	}
 }
 
