--- a/css/johnson/_components.scss
+++ b/css/johnson/_components.scss
@@ -8,7 +8,7 @@
 	margin-top: -1px;
 	.today-hours {
 		float: left;
-		padding: 5px 0 5px 5px;
+		padding: 5px;
 		margin: 5px;
 		span {
 			font-size: 14px;
@@ -92,6 +92,9 @@
 		float: right;
 		background: $tan;
 		border: 1px solid $tan;
+		.today-hours {
+			padding: 5px 0 5px 5px;
+		}
 		.all-hours-link {
 			border-left: 1px solid $pale-tan;
 			float: left;
