--- a/css/johnson/_tabs.scss
+++ b/css/johnson/_tabs.scss
@@ -117,5 +117,12 @@
 	}
 }
 
-
-$fa-var-chevron-right: "\f054";
+// Mobile accordion display
+.panel-heading {
+	.fa-chevron-down {
+		margin-left: .5em;
+	}
+}
+.panel-title {
+	font-size: 18px;
+}
