--- a/css/johnson/_tabs.scss
+++ b/css/johnson/_tabs.scss
@@ -146,7 +146,9 @@
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: $screen-sm) {
+	.resource-content,
 	.panel {
+		.tab-content,
 		.panel-body {
 			.gutter {
 				padding: 20px;
