--- a/css/style.css
+++ b/css/style.css
@@ -7418,6 +7418,9 @@ footer {
 .books-search .btn-jgsm {
   font-size: 14px !important; }
 
+#databases .btn-jgsm {
+  font-size: 14px !important; }
+
 .panel-heading .fa-chevron-down {
   margin-left: .5em;
   font-size: 80%; }
