--- a/css/johnson/_tabs.scss
+++ b/css/johnson/_tabs.scss
@@ -117,6 +117,13 @@
 	}
 }
 
+// Databases
+#databases {
+	.btn-jgsm {
+		font-size: 14px !important;
+	}
+}
+
 // Mobile accordion display
 .panel-heading {
 	.fa-chevron-down {
