--- a/css/style.css
+++ b/css/style.css
@@ -7418,7 +7418,8 @@ footer {
 .books-search .btn-jgsm {
   font-size: 14px !important; }
 
-#databases-collapse .btn-jgsm {
+#databases-collapse .btn-jgsm,
+#databases .btn-jgsm {
   font-size: 14px !important; }
 
 .panel-heading .fa-chevron-down {
