--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -1,7 +1,7 @@
 // BRANDING
 // -------------------------
 
-.navbar-brand {
+.navbar-brand, .navbar-brand:hover {
 	font-size: 29px;
 	text-transform: uppercase;
 	margin: 0 0 .25em 0;
