--- a/css/style.css
+++ b/css/style.css
@@ -7120,7 +7120,7 @@ footer {
     border-radius: 0;
     min-height: 175px; } }
 /* Medium devices (desktops, 992px and up) */
-.navbar-brand {
+.navbar-brand, .navbar-brand:hover {
   font-size: 29px;
   text-transform: uppercase;
   margin: 0 0 .25em 0;
