--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -1,13 +1,11 @@
 // BRANDING
 // -------------------------
 
-.navbar-brand, .navbar-brand:hover {
+.navbar-brand,
+.navbar-brand:hover {
 	font-size: 29px;
 	text-transform: uppercase;
 	margin: 0 0 .25em 0;
-	// height: auto;
-	// padding: 25px 15px 5px 0;
-	// line-height: 1.2em;
 	float: none;
 	display: block;
 	text-decoration: none;
@@ -167,7 +165,7 @@
 	.navbar-brand:hover {
 		color: white;
 		text-shadow: 2px 2px 0px rgba(63, 63, 63, 1);
-		font-size: 36px;
+		font-size: 36px !important;
 	}
 	.college-brand {
 		color: white;
