--- a/css/style.css
+++ b/css/style.css
@@ -7120,7 +7120,8 @@ footer {
     border-radius: 0;
     min-height: 175px; } }
 /* Medium devices (desktops, 992px and up) */
-.navbar-brand, .navbar-brand:hover {
+.navbar-brand,
+.navbar-brand:hover {
   font-size: 29px;
   text-transform: uppercase;
   margin: 0 0 .25em 0;
@@ -7214,7 +7215,7 @@ footer {
   .navbar-brand:hover {
     color: white;
     text-shadow: 2px 2px 0px #3f3f3f;
-    font-size: 36px; }
+    font-size: 36px !important; }
 
   .college-brand {
     color: white;
