--- a/css/style.css
+++ b/css/style.css
@@ -7211,12 +7211,6 @@ footer {
   .navigation-collapse {
     padding-right: 0; }
 
-  .navbar-brand,
-  .navbar-brand:hover {
-    color: white;
-    text-shadow: 2px 2px 0px #3f3f3f;
-    font-size: 36px !important; }
-
   .college-brand {
     color: white;
     text-shadow: 2px 2px 0px #3f3f3f;
@@ -7226,10 +7220,13 @@ footer {
     color: white;
     text-decoration: none; }
 
-  .navbar-brand {
+  .navbar-brand,
+  .navbar-brand:hover {
     padding: 15px;
     font-size: 42px;
-    margin-bottom: .75em; } }
+    margin-bottom: .75em;
+    text-shadow: 2px 2px 0px #3f3f3f;
+    color: white; } }
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 1200px) {
   .navbar-brand {
