--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -1,8 +1,7 @@
 // BRANDING
 // -------------------------
 
-.navbar-brand,
-.navbar-brand:hover {
+.navbar-brand, .navbar-brand:hover {
 	font-size: 29px;
 	text-transform: uppercase;
 	margin: 0 0 .25em 0;
@@ -134,12 +133,38 @@
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: $screen-sm) {
-
+	// .navbar-brand {
+	// 	padding-left: 15px;
+	// }
+	// .navbar {
+	// 	.nav {
+	// 		li {
+	// 			margin-left: 5px;
+	// 		}
+	// 	}
+	// }
 	.sidebar-collapse.collapse {
 		display: block;
 	}
 	.navigation-collapse {
 		padding-right: 0;
+	}
+	// footer {
+	// 	.nav {
+	// 		li {
+	// 			float: left;
+	// 		}
+	// 	}
+	// }
+
+	// .navbar-collapse.collapse {
+	// 	display: none !important;
+	// }
+	.navbar-brand,
+	.navbar-brand:hover {
+		color: white;
+		text-shadow: 2px 2px 0px rgba(63, 63, 63, 1);
+		font-size: 36px;
 	}
 	.college-brand {
 		color: white;
@@ -150,23 +175,26 @@
 		color: white;
 		text-decoration: none;
 	}
-	.navbar-brand,
-	.navbar-brand:hover {
-		padding: 15px;
-		font-size: 42px;
-		margin-bottom: .75em;
-		text-shadow: 2px 2px 0px rgba(63, 63, 63, 1);
-		color: white;
-	}
+	// .navbar-brand {
+	// 	padding: 15px;
+	// 	font-size: 42px;
+	// 	margin-bottom: .75em;
+	// }
 }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: $screen-md) {
-
+	// .navbar {
+	// 	.nav {
+	// 		float: right;
+	// 		margin-top: 3em;
+	// 	}
+	// }
 }
 // /* Large devices (large desktops, 1200px and up) */
 @media (min-width: $screen-lg) {
-	.navbar-brand {
+	.navbar-brand,
+	.navbar-brand:hover {
 		font-size: 48px;
 	}
 }
