--- a/css/style.css
+++ b/css/style.css
@@ -7120,8 +7120,7 @@ footer {
     border-radius: 0;
     min-height: 175px; } }
 /* Medium devices (desktops, 992px and up) */
-.navbar-brand,
-.navbar-brand:hover {
+.navbar-brand, .navbar-brand:hover {
   font-size: 29px;
   text-transform: uppercase;
   margin: 0 0 .25em 0;
@@ -7211,6 +7210,12 @@ footer {
   .navigation-collapse {
     padding-right: 0; }
 
+  .navbar-brand,
+  .navbar-brand:hover {
+    color: white;
+    text-shadow: 2px 2px 0px #3f3f3f;
+    font-size: 36px; }
+
   .college-brand {
     color: white;
     text-shadow: 2px 2px 0px #3f3f3f;
@@ -7218,18 +7223,11 @@ footer {
 
   .college-brand:hover {
     color: white;
-    text-decoration: none; }
-
-  .navbar-brand,
-  .navbar-brand:hover {
-    padding: 15px;
-    font-size: 42px;
-    margin-bottom: .75em;
-    text-shadow: 2px 2px 0px #3f3f3f;
-    color: white; } }
+    text-decoration: none; } }
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 1200px) {
-  .navbar-brand {
+  .navbar-brand,
+  .navbar-brand:hover {
     font-size: 48px; } }
 .hours {
   background: white;
