--- a/css/style.css
+++ b/css/style.css
@@ -7214,7 +7214,8 @@ footer {
   .navbar-brand:hover {
     color: white;
     text-shadow: 2px 2px 0px #3f3f3f;
-    font-size: 36px; }
+    font-size: 36px;
+    margin-left: 0; }
 
   .college-brand {
     color: white;
