--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -144,7 +144,7 @@
 		color: white;
 		text-shadow: 2px 2px 0px rgba(63, 63, 63, 1);
 		font-size: 36px;
-		margin-left: 0;
+		margin-left: 0 !important;
 	}
 	.college-brand {
 		color: white;
