format simplesaml login

--- a/css/johnson/_nodes.scss
+++ b/css/johnson/_nodes.scss
@@ -22,3 +22,11 @@
 	background: $cornell-primary;
 	color: white;
 }
+
+// SimpleSAML login
+// -------------------------
+.block-simplesamlphp-auth {
+	h2 {
+		margin-top: 2em;
+	}
+}
