--- a/css/style.css
+++ b/css/style.css
@@ -7530,4 +7530,7 @@ body.admin-menu {
   background: #b31b1b;
   color: white; }
 
+.block-simplesamlphp-auth h2 {
+  margin-top: 2em; }
+
 /*# sourceMappingURL=style.css.map */
